syntax = "proto3";

option go_package = "pkg/protocol";


service Voldy {
  rpc CreateTable(CreateTableRequest) returns (CreateTableResponse) {}
  rpc GetHashKey(GetHashKeyRequest) returns (GetResponse) {}
  rpc GetKey(GetKeyRequest) returns (GetResponse) {}
  rpc Put(PutRequest) returns (PutResponse) {}
}

message CreateTableRequest {
  bytes tableName = 1;
}

message CreateTableResponse {
  bytes tableName = 1;
}

message GetHashKeyRequest {
  bytes tableName = 1;
  bytes key = 2;
}

message GetKeyRequest {
  bytes tableName = 1;
  bytes hashKey = 2;
  bytes sortKey = 3;
}

message GetResponse {
  bytes key = 1;
  bytes value = 2;
  bytes version = 3;
}

message PutRequest {
  bytes tableName = 1;
  bytes hashKey = 2;
  bytes sortKey = 3;
  bytes value = 4;
  bytes version = 5;
}

message PutResponse {
  bytes key = 1;
  bytes value = 2;
  bytes version = 3;
}